--- a/rca/project_styleguide/templates/patterns/pages/schools/sod.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/schools/sod.yaml
@@ -1,24 +1,21 @@
 context:
   page:
-    title: School of Architecture
+    title: School of Design
     get_ancestors:
       - is_root: false
         title: Our Schools
     breadcrumb:
       - { label: 'Research', link: /research/ }
-    introduction: 'Offering an unparalleled interdisciplinary context to pursue design research in the spatial disciplines.'
-    introduction_image: true
-    school_dean: John Smith
-    location: <p><a>RCA Kensington</a></p><p><a>RCA White City</a></p>
-    next_open_day_start_date: !!timestamp '2020-12-13 2:00:00'
-    next_open_day_end_date: !!timestamp '2020-12-15 2:00:00'
+    introduction: 'The School engages with design on multiple levels, from the highly conceptual to the deeply practical, with a strong culture of innovation, experimentation and debate. Programmes are supported by staff with reputations in world-leading research, teaching and practice. '
+    introduction_image: True
+    school_dean: Paul Anderson
+    location: <p><a>RCA Kensington</a></p>
+    next_open_day_start_date: False
+    next_open_day_end_date: False
     get_in_touch: <p>0123456789</p><p><a href="">email@rca.ac.uk</a></p>
-    social_links:
-      - '<a>Facebook</a>'
-      - '<a>Twitter</a>'
-      - '<a>Instagram</a>'
-    video: 'https://www.youtube.com/watch?v=glIIF-kBXf0'
-    video_caption: Watch the course introduction
+    social_links: False
+    video: 'https://www.youtube.com/watch?v=tDPrqkgQpWM&list=PLk-Jp7vRQvwPUj9xBUTWyaDPG4MOwzDkz'
+    video_caption: Welcome to the School
     body:
       - dummy
     tabs:
@@ -37,7 +34,8 @@ context:
         title: What makes us different?
         introduction: We teach design thinking, training designers who go on to lead global brands worldwide as creative directors and CEOs.
       research:
-        introduction: Characterised by its roots in creative and innovative practice, by engagement with partners in business, industry, government and communities.
+        introduction: Research in the School of Design interrogates the systems that integrate design into daily life, dealing with designed objects, services, and the ways in which they are produced and used.
+        link: https://www.rca.ac.uk/study/schools/school-of-design/funded-research/
       programmes:
         introduction: We offer a range of Graduate Diploma, MA, MRes, MPhil and PhD degree programmes across the art and design disciplines.
       short_courses:
@@ -58,27 +56,11 @@ context:
     get_link_text: Book or view all open days
   about_teasers:
     - {
-        title: 'Innovation RCA',
+        title: 'Collaboration with industry',
         link: '#',
         meta: false,
         person: false,
-        description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque in accumsan massa.',
-        image: true,
-      }
-    - {
-        title: 'Consultancy & knowledge exchange',
-        link: '#',
-        meta: false,
-        person: false,
-        description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque in accumsan massa.',
-        image: true,
-      }
-    - {
-        title: 'Custom executive education',
-        link: '#',
-        meta: false,
-        person: false,
-        description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque in accumsan massa.',
+        description: 'Programmes collaborate and innovate with industry partners and also across subject areas to allow strategic opportunities for multidisciplinary teaching and project development to enhance and ensure student mobility, independent learning and interdisciplinary activity. ',
         image: true,
       }
   news_and_events:
@@ -106,27 +88,15 @@ context:
   worked_with:
     slides:
       - slide:
-        title: 'Red bull'
+        title: 'Logitech'
         image: true
         link: '#'
       - slide:
-        title: 'Red bull'
+        title: 'CERN'
         image: true
         link: '#'
       - slide:
-        title: 'Red bull'
-        image: true
-        link: '#'
-      - slide:
-        title: 'Red bull'
-        image: true
-        link: '#'
-      - slide:
-        title: 'Red bull'
-        image: true
-        link: '#'
-      - slide:
-        title: 'Red bull'
+        title: 'Telefonica'
         image: true
         link: '#'
   programmes:
@@ -187,51 +157,11 @@ context:
         title: View all our short courses
       related_items:
         - item:
-          title: Design Thinking & Innovation
+          title: Disruptive market innovation through design
           degree_level: Executive Education
           programme_description_subtitle: Transform your Customer Experience.
           hero_image: http://placehold.it/300x270/f1f1f1/000
-        - item:
-          title: Service Design Masterclass
-          degree_level: Executive Education
-          programme_description_subtitle: Learn how Creative Leadership can unlock your potential for innovation.
-          hero_image: http://placehold.it/300x270/ff5d1c/fff
-        - item:
-          title: Creative Leadership
-          degree_level: Executive Education
-          programme_description_subtitle: Turning innovation into successful real-world businesses.
-          hero_image: http://placehold.it/300x270
-  stats_block:
-    title: Lorem ipsum dolor sit
-    link_url: '#'
-    link_text: See all Outcomes
-    statistics:
-      - stat:
-        value:
-          after: '%'
-          number: 70
-          summary: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut semper accumsan urna.
-      - stat:
-        value:
-          after: '%'
-          number: 33
-          meta: Nationalities
-          summary: 1 in 3 of our graduates are business owners or independent professionals
-      - stat:
-        value:
-          number: 76
-          meta: Nationalities
-          summary: Our students come from all corners of the globe.
-      - stat:
-        value:
-          after: st
-          number: 1
-          summary: We're the top rated art & design university in the world.
-      - stat:
-        value:
-          number: 100
-          meta: Lorem Ipsum
-          summary: Our students come from all corners of the globe.
+  stats_block: False
   student_stories:
     slides:
       - slide:
@@ -258,105 +188,38 @@ context:
           link: '#'
           person: false
           image: True
-  instagram_feed:
-    handle: rca.architecture
+  instagram_feed: False
   featured_research:
     - slide:
       meta: 'Project'
-      title: 'Lorem ipsum dolor sit'
-      description: 'How innovative and disruptive technologies can address the world’s most intractable challenges'
+      title: 'ArcInTex ETN'
+      description: 'The ArcInTex European Training Network (ETN) aimed to strengthen the foundations of design for more sustainable forms of living by connecting architecture, interaction design and textiles. '
       image: true
-      link: '#'
+      link: 'https://www.rca.ac.uk/research-innovation/projects/arcintex-etn/'
     - slide:
       meta: 'Project'
-      title: 'Lorem ipsum dolor sit'
-      description: 'How innovative and disruptive technologies can address the world’s most intractable challenges'
+      title: 'The Grand Challenge 2020'
+      description: 'The Grand Challenge 2020: 'Enhancing the Human – capability and performance', asked students to consider designing for humans 180 years from now.'
       image: true
-      link: '#'
-    - slide:
-      meta: 'Project'
-      title: 'Lorem ipsum dolor sit'
-      description: 'How innovative and disruptive technologies can address the world’s most intractable challenges'
-      image: true
-      link: '#'
-  student_research:
-    slides:
-      - slide:
-        value:
-          meta: 'Student project'
-          title: 'RCA x CERN'
-          summary: 'Exploring how science, technology and design can propose solutions for international sustainability challenges.'
-          link: '#'
-          person: false
-          image: True
-      - slide:
-        value:
-          meta: 'Research'
-          title: 'Burberry'
-          summary: 'Promote a design-led disruptive research environment to develop new approaches to innovation in materials and applications.'
-          link: '#'
-          person: false
-          image: True
-      - slide:
-        value:
-          meta: 'Student project'
-          title: 'Designing the imposible for NASA'
-          summary: 'Creating world class experiences that started at the RCA'
-          link: '#'
-          person: false
-          image: True
-  research_collaboration:
-    slides:
-      - slide:
-        title: 'Red bull'
-        image: true
-        link: '#'
-      - slide:
-        title: 'Red bull'
-        image: true
-        link: '#'
-      - slide:
-        title: 'Red bull'
-        image: true
-        link: '#'
-      - slide:
-        title: 'Red bull'
-        image: true
-        link: '#'
-      - slide:
-        title: 'Red bull'
-        image: true
-        link: '#'
-      - slide:
-        title: 'Red bull'
-        image: true
-        link: '#'
+      link: 'https://www.rca.ac.uk/research-innovation/projects/grand-challenge-2020/'
+  student_research: False
+  research_collaboration: False
   research_links:
     title: Also…
     links:
       - item:
-        value: { text: 'Our research themes', href: 'http://www.google.com' }
-      - item:
-        value:
-          {
-            text: 'Architects Council of Europe (ACE)',
-            href: 'http://www.google.com',
-          }
+        value: { text: 'Research students', href: '#' }
   research_cta:
-    title: Lab. for Design & Machine Learning
-    description: In addition to the research themes, the School of Architecture created the Laboratory for Design & Machine Learning to conduct research into new interdisciplinary forms of designing, evaluation, and policymaking.
+    title: Impact case studies
+    description: The range of areas in which our world-leading research achieves high levels of impact – economic, social and cultural – is exemplified by the seven impact case studies submitted to REF2014. Four of these originated in the School of Design, as listed below.
     action: Find out more
-    link: '#'
+    link: 'https://www.rca.ac.uk/study/schools/school-of-design/impact-case-studies/'
   programmes_cta:
     title: Custom executive education
     description: The RCA delivers senior-level custom executive education programmes for business, government, the public sector and universities globally.
     action: Browse Executive Education
     link: '#'
-  staff_cta:
-    title: Meet the RCA
-    description: Meet Dr Godofredo Pereira, Head of Programme for MA Environmental Architecture & MA City Design
-    action: Find out more
-    link: '#'
+  staff_cta: False
   staff:
     - { name: 'Beth Hughes', role: 'Head of Programmes', link: '#' }
     - { name: 'Beth Hughes', role: 'Head of Programmes', link: '#' }
