--- a/rca/project_styleguide/templates/patterns/pages/schools/soah.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/schools/soah.yaml
@@ -1,24 +1,21 @@
 context:
   page:
-    title: School of Architecture
+    title: School of Arts & Humanities
     get_ancestors:
       - is_root: false
         title: Our Schools
     breadcrumb:
       - { label: 'Research', link: /research/ }
-    introduction: 'Offering an unparalleled interdisciplinary context to pursue design research in the spatial disciplines.'
-    introduction_image: true
-    school_dean: John Smith
-    location: <p><a>RCA Kensington</a></p><p><a>RCA White City</a></p>
-    next_open_day_start_date: !!timestamp '2020-12-13 2:00:00'
-    next_open_day_end_date: !!timestamp '2020-12-15 2:00:00'
+    introduction: 'The School of Arts & Humanities bridges research and study in the fine and applied arts together with curating, writing and the history of design. '
+    introduction_image: True
+    school_dean: Ken Neil
+    location: <p><a>RCA Battersea</a></p><p><a>RCA Kensington</a></p><p><a>RCA White City</a></p>
+    next_open_day_start_date: False
+    next_open_day_end_date: False
     get_in_touch: <p>0123456789</p><p><a href="">email@rca.ac.uk</a></p>
-    social_links:
-      - '<a>Facebook</a>'
-      - '<a>Twitter</a>'
-      - '<a>Instagram</a>'
+    social_links: False
     video: 'https://www.youtube.com/watch?v=glIIF-kBXf0'
-    video_caption: Watch the course introduction
+    video_caption: Welcome to the School
     body:
       - dummy
     tabs:
@@ -37,7 +34,8 @@ context:
         title: What makes us different?
         introduction: We teach design thinking, training designers who go on to lead global brands worldwide as creative directors and CEOs.
       research:
-        introduction: Characterised by its roots in creative and innovative practice, by engagement with partners in business, industry, government and communities.
+        introduction: Research in the School of Arts & Humanities is driven by the individual concerns of academics and students. We work within an integrated research culture and our work informs every level of activity in the School.
+        link: https://www.rca.ac.uk/study/schools/school-of-arts-humanities/current-research/
       programmes:
         introduction: We offer a range of Graduate Diploma, MA, MRes, MPhil and PhD degree programmes across the art and design disciplines.
       short_courses:
@@ -58,27 +56,19 @@ context:
     get_link_text: Book or view all open days
   about_teasers:
     - {
-        title: 'Innovation RCA',
+        title: 'Public programmes',
         link: '#',
         meta: false,
         person: false,
-        description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque in accumsan massa.',
+        description: 'School-wide public programmes include "SoAH presents" and "Urgency of the arts lectures" ',
         image: true,
       }
     - {
-        title: 'Consultancy & knowledge exchange',
+        title: 'Unique learning experience',
         link: '#',
         meta: false,
         person: false,
-        description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque in accumsan massa.',
-        image: true,
-      }
-    - {
-        title: 'Custom executive education',
-        link: '#',
-        meta: false,
-        person: false,
-        description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque in accumsan massa.',
+        description: 'The School of Arts & Humanities offers students and researchers the opportunity to develop their own practices and careers as artists, makers, historians, theorists, writers and curators. All are encouraged to focus in depth on the particularities of their own work while also being exposed to more critically diverse positions across the School.',
         image: true,
       }
   news_and_events:
@@ -103,32 +93,7 @@ context:
       link: '#'
       image: //placekitten.com/251/142
       person: false
-  worked_with:
-    slides:
-      - slide:
-        title: 'Red bull'
-        image: true
-        link: '#'
-      - slide:
-        title: 'Red bull'
-        image: true
-        link: '#'
-      - slide:
-        title: 'Red bull'
-        image: true
-        link: '#'
-      - slide:
-        title: 'Red bull'
-        image: true
-        link: '#'
-      - slide:
-        title: 'Red bull'
-        image: true
-        link: '#'
-      - slide:
-        title: 'Red bull'
-        image: true
-        link: '#'
+  worked_with: False
   programmes:
     - item:
       link:
@@ -187,20 +152,15 @@ context:
         title: View all our short courses
       related_items:
         - item:
-          title: Design Thinking & Innovation
+          title: Contemporary Art Summer School
           degree_level: Executive Education
           programme_description_subtitle: Transform your Customer Experience.
           hero_image: http://placehold.it/300x270/f1f1f1/000
         - item:
-          title: Service Design Masterclass
+          title: 'Curating, contemporary art & design: theory and practice'
           degree_level: Executive Education
           programme_description_subtitle: Learn how Creative Leadership can unlock your potential for innovation.
           hero_image: http://placehold.it/300x270/ff5d1c/fff
-        - item:
-          title: Creative Leadership
-          degree_level: Executive Education
-          programme_description_subtitle: Turning innovation into successful real-world businesses.
-          hero_image: http://placehold.it/300x270
   stats_block:
     title: Lorem ipsum dolor sit
     link_url: '#'
@@ -258,27 +218,26 @@ context:
           link: '#'
           person: false
           image: True
-  instagram_feed:
-    handle: rca.architecture
+  instagram_feed: False
   featured_research:
     - slide:
       meta: 'Project'
-      title: 'Lorem ipsum dolor sit'
-      description: 'How innovative and disruptive technologies can address the world’s most intractable challenges'
+      title: 'bauhaus imaginista'
+      description: '‘bauhaus imaginista’ was a major international project exploring the transnational character of the Bauhaus and its reception, which was commissioned to mark the school’s centenary, in 2019. '
       image: true
-      link: '#'
+      link: 'https://www.rca.ac.uk/research-innovation/projects/bauhaus-imaginista/'
     - slide:
       meta: 'Project'
-      title: 'Lorem ipsum dolor sit'
-      description: 'How innovative and disruptive technologies can address the world’s most intractable challenges'
+      title: '4Cs: From Conflict to Conviviality through Creativity and Culture'
+      description: 'A transnational project exploring how training and education in art and culture can reflect on, and respond to, conflict through audience participation and co-production. '
       image: true
-      link: '#'
+      link: 'https://www.rca.ac.uk/research-innovation/projects/4cs-conflict-conviviality-through-creativity-and-culture/'
     - slide:
       meta: 'Project'
-      title: 'Lorem ipsum dolor sit'
-      description: 'How innovative and disruptive technologies can address the world’s most intractable challenges'
+      title: 'Tai Shani: DC Productions'
+      description: 'Tai Shani’s DC: Productions (originally called Dark Continent) is an epic, episodic project that comprises interconnected yet stand-alone performances, installations and films of experimental narrative texts, an expanded adaptation of Christine de Pizan’s 1405 proto-feminist text, ‘The Book of the City of Ladies’. '
       image: true
-      link: '#'
+      link: 'https://www.rca.ac.uk/research-innovation/projects/tai-shani-dc-productions/'
   student_research:
     slides:
       - slide:
@@ -291,7 +250,7 @@ context:
           image: True
       - slide:
         value:
-          meta: 'Research'
+          meta: 'Student project'
           title: 'Burberry'
           summary: 'Promote a design-led disruptive research environment to develop new approaches to innovation in materials and applications.'
           link: '#'
@@ -308,55 +267,88 @@ context:
   research_collaboration:
     slides:
       - slide:
-        title: 'Red bull'
+        title: 'Tate Britain'
         image: true
         link: '#'
       - slide:
-        title: 'Red bull'
+        title: 'Gasworks Gallery'
         image: true
         link: '#'
       - slide:
-        title: 'Red bull'
+        title: 'Johann Jacobs Museum'
         image: true
         link: '#'
       - slide:
-        title: 'Red bull'
+        title: 'Delphina Foundation'
         image: true
         link: '#'
       - slide:
-        title: 'Red bull'
+        title: 'West Bund Art and Design Fair'
         image: true
         link: '#'
       - slide:
-        title: 'Red bull'
+        title: 'Fundació Antoni Tàpies'
+        image: true
+        link: '#'
+      - slide:
+        title: 'Tensta Konsthall'
+        image: true
+        link: '#'
+      - slide:
+        title: 'Nida Art Colony'
+        image: true
+        link: '#'
+      - slide:
+        title: 'Victoria & Albert Museum'
+        image: true
+        link: '#'
+      - slide:
+        title: 'Royal Crown Derby'
+        image: true
+        link: '#'
+      - slide:
+        title: 'Santorus'
+        image: true
+        link: '#'
+      - slide:
+        title: 'Burberry'
+        image: true
+        link: '#'
+      - slide:
+        title: 'The Gulbenkian Foundation'
+        image: true
+        link: '#'
+      - slide:
+        title: 'Lisbon'
+        image: true
+        link: '#'
+      - slide:
+        title: 'Art on the Underground'
         image: true
         link: '#'
   research_links:
     title: Also…
     links:
       - item:
-        value: { text: 'Our research themes', href: 'http://www.google.com' }
+        value: { text: 'Research students', href: '#' }
+      - item:
+        value: { text: 'Completed research projects', href: '#' }
+      - item:
+        value: { text: 'Research website', href: '#' }
       - item:
         value:
-          {
-            text: 'Architects Council of Europe (ACE)',
-            href: 'http://www.google.com',
-          }
+          { text: 'Prova: The Arts & Humanities Research Journal', href: '#' }
   research_cta:
-    title: Lab. for Design & Machine Learning
-    description: In addition to the research themes, the School of Architecture created the Laboratory for Design & Machine Learning to conduct research into new interdisciplinary forms of designing, evaluation, and policymaking.
+    title: 'Prova: The Arts & Humanities Research Journal'
+    description: Archive for the School of Arts & Humanities's flagship lecture series
     action: Find out more
-    link: '#'
+    link: 'https://www.rca.ac.uk/study/schools/school-of-arts-humanities/visual-cultures/'
   programmes_cta:
     title: Custom executive education
     description: The RCA delivers senior-level custom executive education programmes for business, government, the public sector and universities globally.
     action: Browse Executive Education
     link: '#'
-  staff_cta:
-    title: Meet the RCA
-    description: Meet Dr Godofredo Pereira, Head of Programme for MA Environmental Architecture & MA City Design
-    action: Find out more
-    link: '#'
+  staff_cta: False
   staff:
     - { name: 'Beth Hughes', role: 'Head of Programmes', link: '#' }
     - { name: 'Beth Hughes', role: 'Head of Programmes', link: '#' }
